[tool.poetry]
name = "vast-pipeline"
version = "1.0.0dev"
description = "Vast Pipeline code base for processing and analysing telescope images from the Square Kilometre Pathfinder"
authors = ["The VAST Development Team"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
astropy = "^5.0"
astroquery = "^0.4.0"
bokeh = "2.3.3" # must align with @bokeh/bokehjs version in package.json
cloudpickle = "^1.5.0"
dask = {extras = ["dataframe"], version = "^2022.1.0"}
dill = "^0.3.3"
Django = "^3.2.12"
django-crispy-forms = "^1.9.2"
django-environ = "^0.4.5"
djangorestframework = "^3.11.0"
djangorestframework-datatables = "0.5.1"
django-q = "^1.3.3"
django-tagulous = "^1.1.0"
Jinja2 = "^3.0.3"
networkx = "^2.4"
numpy = "^1.18.1"
pandas = "^1.2.0"
psutil = "^5.7.0"
psycopg2 = "^2.8.4"
pyarrow = "^7.0"
scipy = "^1.6.0"
social-auth-app-django = "^3.1.0"
social-auth-core = "^3.3.3"
sqlalchemy = "^1.3.11"
whitenoise = "^5.2.0"
gevent = { version = "^21.1.2", optional = true }
gunicorn = { version = "^20.0.4", optional = true }
forced-phot = { git = "https://github.com/askap-vast/forced_phot.git" }
strictyaml = "^1.3.2"
colorcet = "^2.0.6"
matplotlib = "^3.5.0"
holoviews = "^1.14.7"
datashader = "^0.13.0"
channels = "^3.0.4"

[tool.poetry.dev-dependencies]
mkdocs-material = "^8.2.4"
mkdocstrings = {extras = ["python"], version = "^0.18.0"}
mkdocs-minify-plugin = "^0"
mkdocs-material-extensions = "^1.0.1"
mkdocs-gen-files = "^0"
pygraphviz = "^1.7"
ipdb = "^0.13.6"
ipython = "^7.31.1"
pip-tools = "^5.5.0"
tabulate = "^0.8.9"
django-debug-toolbar = "^3.2"
flake8 = "^3.9.0"
mypy = "^0.910"
black = "^20.8b1"
django-extensions = "^3.1.1"
rope = "^0.18.0"
django-stubs = "^1.9.0"
lightgallery = "^0"
mkdocs-git-revision-date-localized-plugin = "^0"
mike = "^1.1.2"
pyfakefs = "^4.5.5"

[tool.poetry.extras]
prod = ["gevent", "gunicorn"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "webinterface.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
